syntax = "proto3";

option csharp_namespace = "ConsoleApp2";

package time;

service Time {

    rpc GetCurrentTime (Empty) returns (TimeResponse);

}
message Empty{}
message TimeResponse {

    string current_time = 1;
    string current_date=2;

}
